dependency: bump commons-beanutils:commons-beanutils
Bumps commons-beanutils:commons-beanutils from 1.9.4 to 1.10.0.

---
updated-dependencies:
- dependency-name: commons-beanutils:commons-beanutils
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>